tests/invalid/list_set_index_non_int/main.py
def main() -> None:
    xs: list[int] = [1, 2, 3]
    xs["a"] = 10
